# Reserch

./: .gitignore  README.md  c_transform.py  convex_hull.ipynb  convex_hull.py  progress.md
Codes/: .gitignore  back2_and_forth_jacobs.py  back_and_forth.py  back_and_forth_jacobs.py  back_and_forth_jacobs:JKO.py  back_and_forth_jacobs:JKO2.py  back_and_forth_jacobs:JKO3.py  back_and_forth_jacobs:JKO_barenblatt.py  back_and_forth_jacobs:JKOscheme.py  back_and_forth_jacobs:JKOscheme2.py  back_and_forth_jacobs:JKOscheme3.py  back_and_forth_jacobs:JKOscheme_tau.py  back_and_forth_jacobs:JKOscheme_theta.py  back_and_forth_jacobs:change_sigma.py  back_and_forth_jacobs:fixed_sigma.py  back_and_forth_sampling.py  barenblatt.py  bbr_JKO_barenblatt.py  c_transform.py  convex_hull.py  euler_explicit_JKO._barenblatt.py  jacobs.py  legendre_fenchel.py  push_forward.py  push_forward_jacobi.py  push_forward_jacobian.py  pyproject.toml  result_baf.tex  result_baf_fft.tex  result_baf_gauss.tex  result_baf_gauss512.tex  result_euler.tex  sampling_push_forward.py  test.py  test1.py
Codes/Reference/: Legendre-Fenchel transform and back and forth for optimal transport.ipynb  c_transform.py  convex_hull.py  convex_hull2.py  jacobs_r2.cpp  legendre_fenchel.py  legendre_fenchel2.py  ref_back_and_forth.py  ref_lib.rs
Codes/baf_for_wassserstein/: baf_introducing_tau.py  baf_introducing_tau_common_ascent.py
Codes/jupyter notebook/: .Legendre-Fenchel transform and back and forth for optimal transport.ipynb.icloud  .back_and_forth.ipynb.icloud  back_and_forth.ipynb  back_and_forth_jacobs.ipynb  (+6 more)
(+97 files in other folders)
